--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -781,7 +781,9 @@ Insgesamt schließen die Konfidenzintervalle aus der Tabelle~\ref{tab:dynamic} d
 \chapter{Diskussion}
 
 \section{Interpretation: Einfluss des Verzweigungsgrades auf die Traversal}
-Vorher wurde gezeigt, dass es Einsparung in der Traversal-Time für $k = 4$ gegenüber der binären Referenz gab, während es für $k \in \{8, 16\}$ starke Einbußen in der Performance gab.
+Vorher wurde gezeigt, dass es teilweise Einsparung in der Traversal-Time für $k = 4$ gegenüber der binären Referenz gab, während es für $k \in \{8, 16\}$ in jedem untersuchten Fall starke Einbußen in der Performance gab.
+
+Für k-way splitting sind die Messwerte
 
 Eine plausible Erklärung für die beobachteten Ergebnisse ist ein Abwägung zwischen der Anzahl an inneren Knoten und der Anzahl an auszuführenden AABB-Tests bzw. Kollisionsüberprüfungen zwischen Primärstrahl und Bounding Boxen. Bei höheren Verzweigungsgraden müssen nämlich pro Node mehr Kinder überprüft werden, während es insgesamt aber auch weniger innere Nodes gibt, die überhaupt überprüft werden können. Es lässt sich interpretieren, dass für $k = 4$ die Menge an weniger besuchten Nodes die größere Menge an AABB-Tests noch überkompensiert, während dies ab $k = 8$ nicht mehr der Fall ist. Zur Veranschaulichung dient Abbildung~\ref{fig:aabb-example} in der man Beispielhaft die Menge an AABB-Tests und Triangle-Tests, bzw. Primärstrahl und Polygon Kollisionen, ablesen kann. 
 \begin{figure}[h]
@@ -795,26 +797,8 @@ Zudem ist wichtig, dass der für $k = 4$ beobachtete Effekt zwar statistisch sig
 \section{Interpretation: K-way splitting gegen collapsing}
 Im Rahmen der Ergebnissvorstellung wurde gezeigt, dass die Messergebnisse unabhängig von der gewählten Methode zur Erstellung der Wide BVH ähnliche Messungen ergaben. Die untersuchten Messergebnisse zeigten keinen signifikanten Unterschied zwischen den Traversal-Times für die beiden Methoden.
 
-Die naheliegendste Erklärung ist, dass die räumliche Partitionierung für beide Verfahren sehr ähnlich ist. Vor allem deshalb, da beiden Methoden die gleichen Splitting-Algorithmen zugrunde liegen. Das zusammenfassen der binären BVH durch collapsing verändert zwar die Tiefe des Baumes, allerdings scheint es, dass sich die Wahrscheinlichkeit für die Kollision zwischen Ray und AABB nicht sonderlich zu der durch k-way splitting erzeugten BVH unterscheidet. In Abbildung~\ref{fig:aabb-comparison} lässt sich anhand eines Beispiels ablesen, dass die Menge an AABB-Tests, positiv wie negativ, unabhängig vom gewählten Verfahren in der gleichen Größenordnung liegen. Für das Beispiel wurden wieder Stanford Bunny und SAH gewählt.
-\begin{figure}[h]
-    \centering
-    \includegraphics[width=\textwidth]{results/aabb-test-comparison.png}
-    \caption{AABB- und Triangle-Tests k-way vs. collapse, Stanford Bunny, SAH}
-    \label{fig:aabb-comparison}
-\end{figure}
-Eine Konsequenz dieser Ergebnisse ist, dass die Wahl des Wide BVH Konstruktionsverfahren nach Implementierungsaufwand oder Construction-Time entschieden werden sollte, da es keine signifikanten einbußen durch die Wahl der untersuchten Verfahren gibt. 
-
 \section{Interpretation: Dynamisches Modell}
 Für das dynamische Modell wurde gezeigt, dass auch hier $k = 4$ überwiegend bessere Ergebnisse gegenüber der binären Referenz aufzeigt, der Effekt allerdings mit steigender Szenengröße zu sinken bzw. sich sogar leicht umzukehren scheint. Für $k = 8$ und $k = 16$ wurden klar schlechtere Ergebnisse gezeigt.
-
-Der Unterschied gegenüber der Ergebnisse der ersten Forschungsfrage ist dadurch erklärbar, dass die die Construction-Time über die verschiedenen Verzweigungsgrade hinweg für jeden Splitting-Algorithmus nahezu konstant zu sein scheint, wie man auch in Abbildung~\ref{fig:dynamic-c-vs-t} ablesen kann. Die Vorteile in der Traversal-Time werden damit durch einen konstanten offset verschlechtert, was zur Folge hat, dass der Speedup für größere Szenen gegen $1$ geht.  
-\begin{figure}[h]
-    \centering
-    \includegraphics[width=\textwidth]{results/dynamic-construction-vs-traversal.png}
-    \caption{Vergleich Construction- gegen Traversal-Time}
-    \label{fig:dynamic-c-vs-t}
-\end{figure}
-Vorsichtig kann man beurteilen, dass der Effekt für größere Szenen zu einem immer größer werden Problem wird, sodass der Vorteil von $k = 4$ immer weiter schwindet oder möglicherweise sogar zum Nachteil wird. Allerdings ist die untersuchte Stichprobengröße an Szenen nicht ausreichend um hierfür finale Aussagen liefern zu können, weshalb man hier von Indizien sprechen muss. 
 
 \section{Literaturkontext}
 In der Literatur werden Wide BVH eher im Kontext mit der Nutzung von SIMD oder GPUs erwähnt, da höhere Verzweigungsgrade Chancen für die bessere Parallelisierbarkeit bieten~\cite{4634620}. 
