doc: thesis discussion rq1 ready

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -783,18 +783,23 @@ Insgesamt schließen die Konfidenzintervalle aus der Tabelle~\ref{tab:dynamic} d
 \section{Interpretation: Einfluss des Verzweigungsgrades auf die Traversal}
 Vorher wurde gezeigt, dass es teilweise Einsparung in der Traversal-Time für $k = 4$ gegenüber der binären Referenz gab, während es für $k \in \{8, 16\}$ in jedem untersuchten Fall starke Einbußen in der Performance gab.
 
-% Hier noch update
-Für $k = 4$ schwanken die Werte bei Nutzung des k-way splittings und näheren sich für die größeren untersuchten Modelle 
-Unter Nutzung des Collapsing-Verfahrens sind die Speedups deutlich wertstabiler. Hier lassen sich klare Negativtrends für den Median-Split und Positivtrends für SAH und BSAH ablesen. 
-%Ab hier ok
-Eine plausible Erklärung für die beobachteten Ergebnisse ist ein Abwägung zwischen der Anzahl an inneren Knoten und der Anzahl an auszuführenden AABB-Tests bzw. Kollisionsüberprüfungen zwischen Primärstrahl und Bounding Boxen. Bei höheren Verzweigungsgraden müssen nämlich pro Node mehr Kinder überprüft werden, während es insgesamt aber auch weniger innere Nodes gibt, die überhaupt überprüft werden können. Es lässt sich interpretieren, dass für $k = 4$ die Menge an weniger besuchten Nodes die größere Menge an AABB-Tests noch in den meisten Fällen überkompensiert, während dies ab $k = 8$ nicht mehr der Fall ist. Zur Veranschaulichung dient Abbildung~\ref{fig:aabb-example} in der man Beispielhaft die Menge an AABB-Tests und Triangle-Tests, bzw. Primärstrahl und Polygon Kollisionen, ablesen kann. 
+Für $k = 4$ schwanken die Werte bei Nutzung des k-way splittings und näheren sich für die größeren untersuchten Modelle immer mehr in Richtung $1$ aneinander an. Unter Nutzung des Collapsing-Verfahrens sind die Speedups deutlich wertstabiler. Hier lassen sich klare Negativtrends für den Median-Split und Positivtrends für SAH und BSAH ablesen. 
+
+Eine plausible Erklärung für die konstante Verbessserung der Ergebnisse, im Fall $k = 4$ mit collapsing, ist ein Abwägung zwischen der Anzahl an inneren Knoten und der Anzahl an auszuführenden AABB-Tests bzw. Kollisionsüberprüfungen zwischen Primärstrahl und Bounding Boxen. Bei höheren Verzweigungsgraden müssen nämlich pro Node mehr Kinder überprüft werden, während es insgesamt aber auch weniger innere Nodes gibt, die überhaupt überprüft werden können. Es lässt sich interpretieren, dass für $k = 4$ die Menge an weniger besuchten Nodes die größere Menge an AABB-Tests noch in den meisten Fällen überkompensiert, während dies ab $k = 8$ nicht mehr der Fall ist. Zur Veranschaulichung dient Abbildung~\ref{fig:aabb-example-collaping} in der man Beispielhaft die Menge an AABB-Tests und Triangle-Tests, bzw. Primärstrahl und Polygon Kollisionen, ablesen kann. 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=\textwidth]{results/rq1/hit_ray_analysis.png}
-    \caption{AABB- und Triangle-Tests, Stanford Bunny, BSAH}
-    \label{fig:aabb-example}
+    \includegraphics[width=\textwidth]{results/rq1/hit_ray_analysis_collapse.png}
+    \caption{AABB- und Triangle-Tests, Stanford Bunny, BSAH, collapsing}
+    \label{fig:aabb-example-collaping}
 \end{figure}
-Zudem ist wichtig, dass der für $k = 4$ beobachtete Effekt zwar statistisch signifikant ist, aber trotzdem stark vom untersuchten Modell abhängt und maximal 10 Prozent beträgt. Die größte Optimierung geschieht bei Modellen mit ohnehin sehr kurzer Traversal-Time. Das heißt, dass Wide BVH in diesem linearen Zusammenhang eher als szenenabhäbgige Optimierung mit kleinem Effekt zu sehen ist. Zudem bringt die Nutzung von collapsing Wertstabilere Ergebnisse hervor. 
+Den gleichen Effekt kann man im Fall von k-way splitting (Abbildung~\ref{fig:aabb-example-k-way}) nicht erkennen, allerdings ist der Trend für durchgeführte AABB-Test dort sehr viel stabiler, weshalb die Speedups für größere $k$ besser gegenüber collaping, wenn auch trotzdem schlechter gegenüber der binären Referenz ausfallen.
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=\textwidth]{results/rq1/hit_ray_analysis_kway.png}
+    \caption{AABB- und Triangle-Tests, Stanford Bunny, BSAH, k-way}
+    \label{fig:aabb-example-k-way}
+\end{figure}
+Zudem ist wichtig, dass der für $k = 4$ beobachtete Effekt zwar statistisch signifikant ist, aber trotzdem stark vom untersuchten Modell abhängt und maximal 10 Prozent beträgt. Die größte Optimierung geschieht bei Modellen mit ohnehin sehr kurzer Traversal-Time. Das heißt, dass Wide BVHs in diesem linearen Zusammenhang eher als szenenabhäbgige Optimierung mit kleinem Effekt zu sehen sind. Zudem bringt die Nutzung von collapsing Wertstabilere Ergebnisse über alle Szenen für $k = 4$ hervor, wenn auch der Trend sich für $k \ge 8$ durch bessere AABB-Tests umzukehren scheint.
 
 \section{Interpretation: K-way splitting gegen collapsing}
 Im Rahmen der Ergebnissvorstellung wurde gezeigt, dass die Messergebnisse unabhängig von der gewählten Methode zur Erstellung der Wide BVH ähnliche Messungen ergaben. Die untersuchten Messergebnisse zeigten keinen signifikanten Unterschied zwischen den Traversal-Times für die beiden Methoden.
