doc: thesis discussion rq2 ready

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -783,9 +783,8 @@ Insgesamt schließen die Konfidenzintervalle aus der Tabelle~\ref{tab:dynamic} d
 \section{Interpretation: Einfluss des Verzweigungsgrades auf die Traversal}
 Vorher wurde gezeigt, dass es teilweise Einsparung in der Traversal-Time für $k = 4$ gegenüber der binären Referenz gab, während es für $k \in \{8, 16\}$ in jedem untersuchten Fall starke Einbußen in der Performance gab.
 
-Für $k = 4$ schwanken die Werte bei Nutzung des k-way splittings und näheren sich für die größeren untersuchten Modelle immer mehr in Richtung $1$ aneinander an. Unter Nutzung des Collapsing-Verfahrens sind die Speedups deutlich wertstabiler. Hier lassen sich klare Negativtrends für den Median-Split und Positivtrends für SAH und BSAH ablesen. 
-
-Eine plausible Erklärung für die konstante Verbessserung der Ergebnisse, im Fall $k = 4$ mit collapsing, ist ein Abwägung zwischen der Anzahl an inneren Knoten und der Anzahl an auszuführenden AABB-Tests bzw. Kollisionsüberprüfungen zwischen Primärstrahl und Bounding Boxen. Bei höheren Verzweigungsgraden müssen nämlich pro Node mehr Kinder überprüft werden, während es insgesamt aber auch weniger innere Nodes gibt, die überhaupt überprüft werden können. Es lässt sich interpretieren, dass für $k = 4$ die Menge an weniger besuchten Nodes die größere Menge an AABB-Tests noch in den meisten Fällen überkompensiert, während dies ab $k = 8$ nicht mehr der Fall ist. Zur Veranschaulichung dient Abbildung~\ref{fig:aabb-example-collaping} in der man Beispielhaft die Menge an AABB-Tests und Triangle-Tests, bzw. Primärstrahl und Polygon Kollisionen, ablesen kann. 
+Für $k = 4$ schwanken die Werte bei Nutzung des k-way splittings und näheren sich für die größeren untersuchten Modelle immer mehr in Richtung $1$ aneinander an. Unter Nutzung des Collapsing-Verfahrens sind die Speedups deutlich wertstabiler. Hier lassen sich klare Negativtrends für den Median-Split und Positivtrends für SAH und BSAH ablesen. Über die verschiedenen $k$ folgen allerdings alle Splitting-Algorithmen dem gleichen Trend.
+Eine plausible Erklärung für die, bis auf den Median-Split, konstante Verbessserung der Ergebnisse, im Fall $k = 4$ mit collapsing, ist ein Abwägung zwischen der Anzahl an inneren Knoten und der Anzahl an auszuführenden AABB-Tests bzw. Kollisionsüberprüfungen zwischen Primärstrahl und Bounding Boxen. Bei höheren Verzweigungsgraden müssen nämlich pro Node mehr Kinder überprüft werden, während es insgesamt aber auch weniger innere Nodes gibt, die überhaupt überprüft werden können. Es lässt sich interpretieren, dass für $k = 4$ die Menge an weniger besuchten Nodes die größere Menge an AABB-Tests noch in den meisten Fällen überkompensiert, während dies ab $k = 8$ nicht mehr der Fall ist. Zur Veranschaulichung dient Abbildung~\ref{fig:aabb-example-collaping} in der man Beispielhaft die Menge an AABB-Tests und Triangle-Tests, bzw. Primärstrahl und Polygon Kollisionen, ablesen kann. 
 \begin{figure}[h]
     \centering
     \includegraphics[width=\textwidth]{results/rq1/hit_ray_analysis_collapse.png}
@@ -799,10 +798,19 @@ Den gleichen Effekt kann man im Fall von k-way splitting (Abbildung~\ref{fig:aab
     \caption{AABB- und Triangle-Tests, Stanford Bunny, BSAH, k-way}
     \label{fig:aabb-example-k-way}
 \end{figure}
-Zudem ist wichtig, dass der für $k = 4$ beobachtete Effekt zwar statistisch signifikant ist, aber trotzdem stark vom untersuchten Modell abhängt und maximal 10 Prozent beträgt. Die größte Optimierung geschieht bei Modellen mit ohnehin sehr kurzer Traversal-Time. Das heißt, dass Wide BVHs in diesem linearen Zusammenhang eher als szenenabhäbgige Optimierung mit kleinem Effekt zu sehen sind. Zudem bringt die Nutzung von collapsing Wertstabilere Ergebnisse über alle Szenen für $k = 4$ hervor, wenn auch der Trend sich für $k \ge 8$ durch bessere AABB-Tests umzukehren scheint.
+Zudem ist wichtig, dass der für $k = 4$ beobachtete Effekt zwar statistisch signifikant ist, aber trotzdem stark vom untersuchten Modell abhängt und maximal 10 Prozent beträgt. Die größte Optimierung geschieht bei Modellen mit ohnehin sehr kurzer Traversal-Time. Das heißt, dass Wide BVHs in diesem linearen Zusammenhang eher als szenenabhäbgige Optimierung mit kleinem Effekt zu sehen sind. Zudem bringt die Nutzung von collapsing Wertstabilere Ergebnisse über alle Szenen für $k = 4$ hervor, wenn auch der Trend sich für $k \ge 8$ durch bessere AABB-Tests umzukehren scheint. Der starke Ausreißer bei Nutzung des Median-Splits mit k-way splitting durch die kleine Szenengröße zu interpretieren.
 
 \section{Interpretation: K-way splitting gegen collapsing}
-Im Rahmen der Ergebnissvorstellung wurde gezeigt, dass die Messergebnisse unabhängig von der gewählten Methode zur Erstellung der Wide BVH ähnliche Messungen ergaben. Die untersuchten Messergebnisse zeigten keinen signifikanten Unterschied zwischen den Traversal-Times für die beiden Methoden.
+Im Rahmen der Ergebnissvorstellung wurde gezeigt, dass die Messergebnisse für $k = 4$ stark abhängig von der gewählten Szene und dem gewählten Splitting-Algorithmus ausfallen. Die konstante Überlegenheit einer Wide BVH Erzeugungsmethode über alle Kombinationen lässt sich hier nicht erkennen. Interessanter ist das verhalten für steigende $k$. Für untersuchte $k \ge 8$ dominiert das k-way splitting ausnahmslos mit Speedups bis zu einer 6-fachen Geschwindigkeit.
+
+Die naheliegendste Erklärung ist auch hier wieder die die Menge an ausgeführten AABB- und Triange-Tests. Es zeigt sich, dass bei Nutzung vonc collapsing zwar konstant weniger Triangle- bzw. Primitive-Tests durchgeführt werden, es allerdings bei $k = 8$ eine Art Trendumkehrung gibt. Die Menge an eingesparten positiven AABB-Tests reicht nicht mehr aus um die Menge an negativen AABB-Tests und Triangle-Tests zu amortisieren. Beispielhaft lässt sich dies an Abbildung~\ref{fig:aabb-example-mixed} ablesen. Die Nutzung von k-way splitting schein die Menge von negativen AABB-Tests auf kosten von mehr Triangle-Tests konstant niedriger zu halten, während die Menge an negativen AABB-Test fürs collapsing nahezu explodiert. Dies lässt die Vermutung zu, dass collaping deutlich mehr überschneidene AABBs auf hohen Ebenen erzeugt, während es für k-way splitting eher Überschneidungen auf tieferen Ebenen gibt. Da es sehr viel mehr innere Knoten als Primitives gibt, fällt der Effekt deshalb so ungleichmäßig aus.  
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=\textwidth]{results/rq2/hit_ray_analysis_mixed.png}
+    \caption{AABB- und Triangle-Tests, Stanford Bunny, BSAH}
+    \label{fig:aabb-example-mixed}
+\end{figure}
+Insgesamt lässt sich sagen, dass sich für die Konstruktion von Wide BVH in statischen Szenen k-way splitting empfehlen lässt, auch wenn es für $k = 4$ eher von der gewählten Szene abhängt.  
 
 \section{Interpretation: Dynamisches Modell}
 Für das dynamische Modell wurde gezeigt, dass auch hier $k = 4$ überwiegend bessere Ergebnisse gegenüber der binären Referenz aufzeigt, der Effekt allerdings mit steigender Szenengröße zu sinken bzw. sich sogar leicht umzukehren scheint. Für $k = 8$ und $k = 16$ wurden klar schlechtere Ergebnisse gezeigt.
