--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -847,17 +847,18 @@ Fortlaufend bietet es sich an die Stichprobe an Szenen zu erweitern. Mehr und vo
 \chapter{Fazit}
 Der Fokus dieser Arbeit war die analytische Bewertung der Qualität von Top-Down konstruierten Wide BVHs in statischen 3D Szenen aufbauend auf serieller Berechnungen. Dabei gab es das Ziel herauszufinden, ob Wide BVH alleinig auf struktureller bzw. algorithmischer Ebene einen Vorteil gegenüber binärer BVHs innehaben, auch wenn der Vorteil der parallelisierten Berechnung wegfällt.
 
-Im Rahmen der ersten Forschungsfrage zeigten die Messungen einen statistisch signifikanten, wenn auch kleinen Vorteil durch Verwendung einer BVH mit Verzweigungsgrad $k = 4$, gegenüber $k = 2$, in statischen Szenen. Für alle untersuchten Szenen und Algorithmen liegt der Speedup zwischen $1,03$ und $1,08$ für Mittelwerte. Die Qualität der BVH nimmt für $k \ge 8$ deutlich ab mit Speedup-Mittelwerten von $0,63$ bis $0,77$ für $k = 8$ und fällt für $k = 16$ sogar auf Werte zwischen $0,10$ und $0,19$. 
-Damit lässt sich für das gewählte Szenario unter gleichen Voraussetzungen eine Empfehlung für die Nutzung von Wide BVH mit $k = 4$ aussprechen.
+Im Rahmen der ersten Forschungsfrage zeigten die Messungen, dass $k = 4$ der einzig versuchte Verweuígungsgrad ist, der gegenüber $k = 2$ überhaupt potenzielle verbesserungen in der Traversal-Time aufweist. Allerdings sind diese Ergebnisse nicht universell anwendbar, da die Speedups von leichten einbußen bis hin zu klaren Gewinnen reichen, mit Mittelwerten zwischen $0,932$ und $1,234$, wobei die Ergebnisse zwischen Nutzung von k-way splitting und collapsing variieren. Dabei ist zu erwähnen, dass der Median Split in Kombination mit collapsing für $k = 4$ immer Speedups unter $1$ generiert, während die beiden Heuristiken überwiegend Verbesserungen gegenüber der Referenz aufweisen. Für $k \ge 8$ verschlechtert sich die Traversal-Time konsistent über alle untersuchten konfigurationen hinweg, was Wide BVh mit höheren Verzweigungsgraden insgesamt unattraktiv für die Verwendung in statischen Szenen bei serieller Berechnungen macht.
 
-Die Untersuchung der zweiten Forschungsfrage hat ergeben, dass es keinen praktischen Unterschied zwischen der Nutzung der untersuchten Arten der Erzeugung von Wide BVHs in den untersuchten Szenen gibt. Über alle Konfigurationen hinweg ist der Speedup zwischen k-way splitting und collapsing ohne signifikante Abweichung nahe $1$. 
-Damit ist die Empfehlung die gewählte Methode nach Implementierungsaufwand und Construction-Time zu wählen.
+Die Untersuchung der zweiten Forschungsfrage hat ergeben, dass der Unterschied in der Traversal-Time der gegeben Wide BVH Erzeugungsmethode mit steigenden $k$ stark zunimmt. Insgesamt liegen die Speedups für $k = 4$ im Vergleich nahe bei $1$, sind allerdings abhängig vom gewählten Splitting-Algorithmus. Während k-way splitting durch den Median-Split begünstigt wird, gibt es in den untersuchten Fällen bei der Nutzung von  collapsing einen Vorteil durch BSAH. SAh liefert hier keinen klaren Trend. 
+Einen großen Unterschied gibt es für $k \ge 8$, wobei die BVH, die durch k-way splitting erzeugt wurden immer bessere Traversal-Times liefern. Für $k = 16$ spitzt sich dies auf einen bis zu 6-fachen Vorteil zusammen. 
+Damit ist die Empfehlung klar für größere $k$ auf eine durch k-way splitting konstruiierte BVH zu setzen.
 
-Für die Modellierung einer dynamischen Szene durch eine kombinierte Metrik aus \linebreak Construction- und Traversal-Time im Rahmen der letzten Forschungsfrage, bleiben die Ergebnisse ähnlich zur ersten Frage. Verzweigungsgrad $k = 4$ liefert insgesamt die besten Ergebnisse, während $k \ge 8$ auch in diesem Fall schlechtere Metriken liefern. Zudem lassen sich Indizien finden, dass der Vorsprung von $k = 4$ mit steigender Szenengröße abzunehmen scheint bzw. sogar komplett ausbleiben oder sich umkehren kann. 
-Damit kann man sagen, dass auch in diesem Zusammenhang zumindest für die kleineren Untersuchten Szenen ein Vorteil für BVHs mit Verzweigungsgrad $k = 4$ existiert.
+Für die Modellierung einer dynamischen Szene durch eine kombinierte Metrik aus \linebreak Construction- und Traversal-Time im Rahmen der letzten Forschungsfrage, zeigt sich ein stark differenziertes Bild. Für $k = 4$ liefert insgesamt im Durchschnitt die beste Verbesserung, wobei im Fall des collapsings der Median-Split ähnlich der ersten Forschungsfrage gegenüber der binären Referenz unterliegt. Für $k \ge 8$ unterliegt collapsing auch im dynamischen Modell konsequent. Für k-way splitting treten allerdings in einzelnen Konfigurationen, namentlich unetr der Verwendung von BSAH in größeren Szenen, deutliche verbesserungen gegenüber $k = 2$ auf. Dies lässt sich durch sinkende Construction-Times erklären, die im dynamsichen Modell die Gesamtzeit im Falle von k-way splitting stark beeinflussen.
+Damit kann man diese spezifische Konfiguration als klaren Gewinner im dynamischen Modell sehen. Währenddessen sollte auch hier collapsing wegen seiner schlechten Traversal-Times für große $k$ vermieden werden. 
 
-Zusammengefasst lässt sich sagen, dass falls Wide BVHs in der seriellen Berechnung auf der CPU eingesetzt werden, man sich für einen Verzweigungsgrad von $k = 4$ entscheiden sollte, während Verzweigungsgrade $k \ge 8$ vermieden werden sollten.
-Ein wichtiger nächster Schritt wäre die Messungen mit einer größeren Menge an Szenen mit höherer Polygonanzahl durchzuführen, um die Indizien eines abnehmenden Vorteils zu untersuchen und belegbare Aussagen treffen zu können. Zudem wäre es interessant das Verhalten der BVHs unter der Nutzung von anderen Ray-Verteilungen durch beispielsweise Shader-Berechnung mit Hilfe von Sekundärstrahlen oder Ähnlichem zu beleuchten.
+Zusammengefasst lässt sich sagen, 
+Ein wichtiger nächster Schritt wäre die Messungen mit einer größeren Menge an Szenen mit höherer Polygonanzahl durchzuführen, um den Zusammenhang zwischen Szenengröße und Verzweigungsgrad näher zu ergründen. Gerade im dynamischen Modell unter Nutzung einer mit BSAH und k-way splitting erzeugten Wide BVH lassen sich noch viele mögliche Forschungsfragen klären.  
+Zudem wäre es interessant das Verhalten der BVHs unter der Nutzung von anderen Ray-Verteilungen durch beispielsweise Shader-Berechnung mit Hilfe von Sekundärstrahlen oder Ähnlichem zu beleuchten.
 
 \newpage
 \chapter{Appendix}
